src/objects/netsuite_conn__Discount_Item__c.object
<CustomObject>
    <description>This object will store the NetSuite Discount Items.</description>
    <fields>
        <fullName>netsuite_conn__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Display_Name_Code__c</fullName>
        <label>Display Name/Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__NetSuite_Id__c</fullName>
        <externalId>true</externalId>
        <label>NetSuite Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>netsuite_conn__Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Discount Item</label>
    <nameField>
        <label>Item Name/Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Discount Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>